core-systems/aethernova-chain-core.backup.emergency.8989.30540362/ops/terraform/modules/policies/kyverno/policies/clusterpolicies/best-practices/require-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
  annotations:
    policies.kyverno.io/title: Require Limits and Requests
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      As application workloads share cluster resources, it is important to limit resources
      requested and consumed by each Pod. It is recommended to require resource requests and
      limits per Pod, especially for memory and CPU. If a Namespace level request or limit is
      specified, defaults will automatically be applied to each Pod based on the LimitRange
      configuration. This policy validates that all containers have something specified for
      memory and CPU requests and memory limits. (Source: Kyverno policy library)
spec:
  validationFailureAction: Enforce
  background: true
  failurePolicy: Fail
  rules:
    - name: validate-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - kube-public
      validate:
        message: "CPU and memory resource requests and memory limits are required for all containers."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
            =(initContainers):
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
            =(ephemeralContainers):
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
